Fix icon alignment

--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -1,7 +1,7 @@
 mat-sidenav h1 {
+  padding-left: 1rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  text-align: center;
 }
 
 mat-sidenav-content {
